--- a/metadata.yaml
+++ b/metadata.yaml
@@ -53,6 +53,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Catholic Church -- Controversial literature -- Early works to 1800'
 - !lcc 'BX'
+- GITenberg
 title: "A treatise of the cohabitacyon of the faithfull with the vnfaithfull.\r\n\
   Whereunto is added. A sermon made of the confessing of Christe and his gospell,\
   \ and of the denyinge of the same."
